syntax = "proto3";

package fr24.feed.api.v1;
option go_package = "github.com/igolaizola/fr24/pkg/proto";

import "fr24/proto/_common.proto";

message FlightDetailsRequest {
    fixed32 flight_id = 1; // FR24 Flight ID (e.g. `962788562` = `0x3962fcd2`)
    _common.RestrictionVisibility restriction_mode = 2;
    // Whether to include `flight_plan` and `flight_trail_list` in the response
    bool verbose = 3;
}

message FlightDetailsResponse {
    _common.AircraftInfo aircraft_info = 1;
    _common.ScheduleInfo schedule_info = 2;
    _common.FlightProgress flight_progress = 3;
    _common.ExtendedFlightInfo flight_info = 4;
    _common.FlightPlan flight_plan = 5;
    repeated _common.TrailPoint flight_trail_list = 6;
}
